# astrbot-plugin-DDL

./: .gitignore  README.md  _conf_schema.json  main.py  metadata.yaml  pyproject.toml  requirements.txt
lib/: __init__.py  detector.py  renderer.py  template.html  template.py  time_parser.py
src/autoddldetect/: __init__.py  renderer.py  silent_monitor.py  summarizer.py  template.py  time_parser.py
src/ddldetect/: __init__.py  utils.py
